# scoutai

./: .gitignore  notes.txt
scoutai-frontend/: package-lock.json  package.json
scoutai-frontend/app/: globals.css  layout.js  page.js
scoutai_backend/: pyproject.toml
scoutai_backend/src/scoutai_backend/: crew.py  main.py
scoutai_backend/src/scoutai_backend/config/: agents.yaml  tasks.yaml
